2010-02-25 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Add test for socklen_t type
	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Source/GSNetwork.h:
	* Source/NSSocketPort.m: Fix for socklen_t
	* Source/NSMapTable.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConcreteHashTable.m:
	* Headers/Foundation/NSHashTable.h:
	* Headers/Foundation/NSMapTable.h:
        Use NSUInteger values for OSX API compatibility

2010-02-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/runtime.c:
	* Source/ObjectiveC2/blocks_runtime.m:
	Avoid compiler warnings.

2010-02-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAssertionHandler.m:
	* Source/NSObject.m:
	* Source/Additions/NSDebug+GNUstepBase.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Headers/Foundation/NSObject.h:
	* Headers/Additions/GNUstepBase/NSObject+GNUstepBase.h:
	Remove a few old deprecated methods and move others to the
	additions library.
	Make GSMime build on OSX

2010-02-23 Riccardo Mottola <rmottola@users.sf.net>

	* Source/ObjectiveC2/runtime.h: provide gcc-style macros
	* Source/ObjectiveC2/sync.m: removed c99-ism

2010-02-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSNumber.m: Autorelease the values returned by the
	numberWithXXX: methods.

2010-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSpellServer.m (-isWordInUserDictionaries:caseSensitive:):
	Make sure word is checked against the current list of ignored
	words regardless of whether the user (already) has a set of
	learned words in the current language.

2010-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/Unicode.m (GSToUnicode): Fix my own bug fix to
	avoid potential null pointer dereferences, as that fix could lead
	to attempts to free() memory on the stack.

2010-02-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSIndexPath.m:
	* Source/NSPortCoder.m:
	* Source/NSCalendarDate.m: